# roboy_mind

./: CMakeLists.txt  README.md  knowRob_installation.txt  package.xml
include/: common.hpp
include/roboy_mind/: reasoning_node.h
launch/: json_prolog.launch  nodes.launch  nodes.launch~
owl/: catalog-v001.xml  semRoom_semantic_map.owl  semRoom_semantic_map.owl~
prolog/: init.pl  knowledge_utils.pl  myReasoning_utils.pl
src/: reasoning_node.cpp
srv/: srvCheckProperty.srv  srvFindInstances.srv  srvGetObject.srv  srvPositionOf.srv  srvSaveObject.srv  srvShowProperty.srv  srvSiblingsOf.srv  srvSizeOf.srv  srvStoragePlace.srv  srvSubclassOf.srv  srvSubclassesOf.srv
